# PhoenixProf

./: README.md  README_OPEN_QUESTIONS.md  README_TODO.md
build_utils/: CMakeLists.txt  get_cl_headers.py  get_cl_tracing_headers.py  get_gmm_headers.py  get_iga_headers.py  get_igc_headers.py  get_itt.py  get_md_headers.py  get_ze_headers.py
phoenixprof/: CMakeLists.txt
phoenixprof/loader/: loader.cc  shared_library.h
phoenixprof/shared/: tool.h  utils.h  utils_cl.h
phoenixprof/tool/: init.cc  tool.cc  tool.h
phoenixprof/tool/api_tracers/: cl_api_tracer.cc
phoenixprof/tool/cl/: cl_api_collector.h
phoenixprof/tool/frontend/: chrome_tracing_generator.h
phoenixprof/utils/: utils.h
sample_kernels/cl_gemm/: CMakeLists.txt  README.md  cl_utils.h  utils.h
sample_kernels/k_utils/: k_utils.h  k_utils_assert.h  k_utils_cl.h  k_utils_ze.h
sample_kernels/kernel_cl_gemm/: CMakeLists.txt  README.md  main.cc
sample_kernels/kernel_ze_gemm/: CMakeLists.txt  README.md  main.cc
sample_kernels/utils/: utils.h  utils_cl.h  utils_demangle.h  utils_ze.h
samples/cl_gemm/: README.md  assert.h  cl_utils.h  demangle.h  main.cc  phoenixprof_assert.h  utils.h
